feat(Parser): 입력 유효성 검증 및 에러 메시지 개선
- 입력이 비어있을 때 유효성 검증을 추가하고, 잘못된 입력 형식에 대한 에러 메시지를 개선하였습니다.
- parseOrderItem 메서드에서 제품 이름과 수량을 분리하고 유효성 검증을 추가하였습니다.
- parseAndValidateProduct 메서드를 추가하여 제품 입력 형식을 확인하도록 구현하였습니다.
- 각 예외 상황에 대해 명확한 에러 메시지를 추가하여 사용자에게 안내합니다.